[tool.poetry]
name = "cloud-tasks-emulator"
version = "2.0.5"
description = "Local emulator for Google Cloud Tasks"
authors = ["Pontus Bergkvist <pontus.bergkvist@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_tasks_emulator", from ="src"}]


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
redis = ">=2.1.0, < 5.1"
google-cloud-tasks = "^2.15.1"
protobuf = "^4.25.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.poetry.scripts]
cte = 'cloud_tasks_emulator.cli:main'