[project]
classifiers = ["Private :: Do Not Upload"]
name = "cloud-tasks-emulator"
version = "2.0.5"
description = "Local emulator for Google Cloud Tasks"
authors = [{name = "Pontus Bergkvist", email = "pontus.bergkvist@ponty.se"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "google-cloud-tasks == 2.15.1",
    "protobuf == 4.25.2",    
    "redis == 5.0.3",
    "requests == 2.31.0",
    ]

[project.scripts]
cte = 'cloud_tasks_emulator.cli:main'

[project.optional-dependencies]
dev = [
    "python-dotenv == 1.0.0",
    "ruff == 0.3.4",
    ]

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.uv]
package = true