[project]
classifiers = ["Private :: Do Not Upload"]
name = "cloud-tasks-emulator"
version = "1.0.9"
description = "Local emulator for Google Cloud Tasks"
authors = [{name = "Pontus Bergkvist", email = "pontus.bergkvist@ponty.se"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "google-cloud-tasks == 2.15.1",
    "protobuf == 3.19.5",    
    "redis == 2.10.*",
    "requests == 2.28.2",
    ]

[project.scripts]
cte = 'cloud_tasks_emulator.cli:main'

[project.optional-dependencies]
dev = [
    "python-dotenv == 1.0.0",
    
    ]

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]

[[tool.uv.index]]
name = "ponty"
url = "https://europe-north1-python.pkg.dev/prs-next/ponty/simple/"
